--- a/index.html
+++ b/index.html
@@ -4,162 +4,181 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Vzít batoh na záda a jít ...</title>
+
 <style>
+/* === ZÁKLADNÍ NASTAVENÍ === */
 :root {
   --dark-blue: #041633;
   --accent: #ffffff;
   --max-width: 1200px;
 }
-*{box-sizing:border-box;margin:0;padding:0;}
-html,body{
-  font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,Arial;
-  color:var(--accent);
-  background:var(--dark-blue);
-  overflow-x:hidden;
-  scroll-behavior:auto!important;
+* { box-sizing: border-box; margin: 0; padding: 0; }
+body {
+  font-family: Inter, system-ui, sans-serif;
+  color: var(--accent);
+  background: var(--dark-blue);
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
-/* Hero */
-.hero{
-  position:relative;
-  width:100%;
-  height:100vh;
-  background:var(--dark-blue);
-  overflow:hidden;
+/* === HERO OBRÁZEK === */
+.hero {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+  background: var(--dark-blue);
 }
-.hero-bg{
-  position:absolute;
-  inset:0;
-  z-index:0;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background-color:#041633;
+.hero-bg img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-.hero-bg img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  object-position:center;
+.hero-overlay {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 40vh; /* 2/5 výšky */
 }
-.hero-overlay{
-  position:absolute;
-  inset:0;
-  z-index:2;
-  display:flex;
-  align-items:flex-start;
-  justify-content:center;
-  padding-top:40vh; /* tlačítka 2/5 odshora */
-}
-.nav{
-  display:flex;
-  gap:14px;
-  flex-wrap:wrap;
-  justify-content:center;
-}
-.btn{
-  background:rgba(255,255,255,0.12);
-  border:1px solid rgba(255,255,255,0.25);
-  padding:14px 22px;
-  color:white;
-  border-radius:8px;
-  font-weight:600;
-  cursor:pointer;
-  transition:background .25s,transform .2s;
-}
-.btn:hover{background:rgba(255,255,255,0.3);transform:scale(1.04);}
-.btn.active{background:#fff;color:var(--dark-blue);}
 
-/* Galerie */
-main{
-  position:relative;
-  z-index:3;
-  background:none;
-  padding:60px 0 80px;
+/* === TLAČÍTKA === */
+.nav {
+  display: flex;
+  gap: 14px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-.container{width:95%;max-width:var(--max-width);margin:0 auto;}
-.gallery{display:grid;gap:16px;}
-.grid-3{grid-template-columns:repeat(3,1fr);}
-.grid-4{grid-template-columns:repeat(4,1fr);}
-@media(max-width:1000px){.grid-3,.grid-4{grid-template-columns:repeat(2,1fr);}}
-@media(max-width:600px){.grid-3,.grid-4{grid-template-columns:1fr;}}
+.btn {
+  background: rgba(255,255,255,0.12);
+  border: 1px solid rgba(255,255,255,0.25);
+  padding: 14px 22px;
+  border-radius: 8px;
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background 0.25s, transform 0.2s;
+}
+.btn:hover { background: rgba(255,255,255,0.3); transform: scale(1.04); }
+.btn.active { background: #fff; color: var(--dark-blue); }
 
-/* Karty */
-.photo-card{position:relative;overflow:hidden;border-radius:10px;cursor:pointer;background:#000;}
-.photo-card img.photo{width:100%;aspect-ratio:3/2;object-fit:cover;transition:transform .35s ease;}
-.photo-card:hover img.photo{transform:scale(1.04);}
-.photo-overlay{
-  position:absolute;left:0;right:0;bottom:0;padding:10px;
-  background:linear-gradient(to top,rgba(0,0,0,0.7),rgba(0,0,0,0));
-  color:#fff;
+/* === STICKY NAVIGACE === */
+.sticky-nav {
+  position: fixed;
+  top: 0; left: 0; right: 0;
+  background: rgba(4,22,51,0.9);
+  backdrop-filter: blur(6px);
+  padding: 10px 0;
+  display: flex;
+  justify-content: center;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+  transform: translateY(-100%);
+  transition: transform 0.4s ease;
+  z-index: 999;
 }
-.photo-title{font-weight:700;font-size:14px;margin:0;}
-.photo-sub{font-size:12px;opacity:0.9;margin-top:3px;}
+.sticky-nav.show { transform: translateY(0); }
 
-/* Modal */
-.modal-backdrop{
-  position:fixed;inset:0;background:rgba(0,0,0,0.7);
-  display:flex;align-items:center;justify-content:center;
-  z-index:9999;padding:24px;
-  opacity:0;pointer-events:none;transition:opacity .18s;
-}
-.modal-backdrop.show{opacity:1;pointer-events:auto;}
-.modal{
-  width:100%;max-width:980px;max-height:92vh;background:#071431;
-  border-radius:10px;padding:18px;color:#fff;overflow:auto;position:relative;
-}
-.modal-close{
-  position:absolute;right:16px;top:16px;background:none;border:none;
-  color:white;font-size:22px;cursor:pointer;
-}
-.modal .meta{font-size:14px;opacity:.95;margin-bottom:10px;}
-.modal img.main{
-  width:100%;border-radius:8px;object-fit:cover;margin:12px 0;max-height:480px;
-}
-footer{text-align:center;color:rgba(255,255,255,0.6);padding:30px 0;}
+/* === GALERIE === */
+main { padding: 60px 0 80px; }
+.container { width: 95%; max-width: var(--max-width); margin: 0 auto; }
+.gallery { display: grid; gap: 16px; }
+.grid-3 { grid-template-columns: repeat(3, 1fr); }
+.grid-4 { grid-template-columns: repeat(4, 1fr); }
+@media(max-width:1000px) { .grid-3,.grid-4 { grid-template-columns: repeat(2,1fr); } }
+@media(max-width:600px) { .grid-3,.grid-4 { grid-template-columns: 1fr; } }
 
-/* Fullscreen modal (Nepál) */
-.modal.fullscreen{
-  background:#000;max-width:none;max-height:none;width:100%;height:100%;
-  padding:0;display:flex;align-items:center;justify-content:center;
+/* === KARTY === */
+.photo-card {
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  background: #000;
+  cursor: pointer;
 }
-.modal.fullscreen img.main{
-  max-height:90vh;max-width:95vw;object-fit:contain;border-radius:10px;margin:0 auto;display:block;
+.photo-card img.photo {
+  width: 100%;
+  aspect-ratio: 3/2;
+  object-fit: cover;
+  transition: transform .35s ease;
 }
-.modal.fullscreen h3{
-  position:absolute;top:20px;left:30px;color:white;text-shadow:0 2px 5px rgba(0,0,0,0.8);
+.photo-card:hover img.photo { transform: scale(1.04); }
+.photo-overlay {
+  position: absolute; left: 0; right: 0; bottom: 0;
+  padding: 10px;
+  background: linear-gradient(to top,rgba(0,0,0,0.7),rgba(0,0,0,0));
 }
-.modal.fullscreen .modal-close{
-  position:absolute;top:18px;right:24px;font-size:30px;background:none;border:none;color:white;cursor:pointer;z-index:10;
-}
-.modal.fullscreen .nav-arrow{
-  background:none;border:none;color:white;font-size:40px;cursor:pointer;
-  position:absolute;top:50%;transform:translateY(-50%);padding:20px;opacity:0.6;transition:opacity .2s;
-}
-.modal.fullscreen .nav-arrow:hover{opacity:1;}
-.modal.fullscreen .nav-arrow.left{left:20px;}
-.modal.fullscreen .nav-arrow.right{right:20px;}
+.photo-title { font-weight: 700; font-size: 14px; }
+.photo-sub { font-size: 12px; opacity: 0.9; }
 
-/* Responsivní vyladění */
-@media(max-width:900px){
-  .hero-overlay{padding-top:35vh;}
-  .btn{padding:12px 18px;font-size:15px;}
+/* === MODAL === */
+.modal-backdrop {
+  position: fixed; inset: 0;
+  background: rgba(0,0,0,0.7);
+  display: flex; justify-content: center; align-items: center;
+  opacity: 0; pointer-events: none;
+  transition: opacity .2s;
+  z-index: 9999;
 }
-@media(max-width:600px){
-  .hero-overlay{padding-top:30vh;}
-  .nav{flex-direction:column;gap:10px;}
-  .btn{width:180px;text-align:center;}
+.modal-backdrop.show { opacity: 1; pointer-events: auto; }
+.modal {
+  max-width: 960px; width: 90%;
+  max-height: 90vh;
+  background: #071431;
+  border-radius: 10px;
+  padding: 20px;
+  overflow: auto;
+  color: white;
+  position: relative;
 }
+.modal-close {
+  position: absolute; right: 16px; top: 16px;
+  background: none; border: none; color: white;
+  font-size: 22px; cursor: pointer;
+}
+.modal img.main {
+  width: 100%; max-height: 480px;
+  object-fit: cover; border-radius: 8px;
+  margin: 12px 0;
+}
+
+/* === FULLSCREEN MODAL (Nepál) === */
+.modal.fullscreen {
+  background: #000; width: 100%; height: 100%;
+  display: flex; justify-content: center; align-items: center;
+  padding: 0;
+}
+.modal.fullscreen img.main {
+  max-height: 90vh; max-width: 95vw;
+  object-fit: contain;
+}
+.modal.fullscreen .nav-arrow {
+  position: absolute; top: 50%;
+  transform: translateY(-50%);
+  background: none; border: none;
+  color: white; font-size: 40px;
+  cursor: pointer; opacity: 0.6;
+}
+.modal.fullscreen .nav-arrow:hover { opacity: 1; }
+.nav-arrow.left { left: 20px; }
+.nav-arrow.right { right: 20px; }
+
+footer { text-align: center; color: rgba(255,255,255,0.6); padding: 30px 0; }
+
+/* === RESPONSIVITA === */
+@media(max-width:900px) { .hero-overlay { padding-top: 35vh; } .btn { padding: 12px 18px; font-size: 15px; } }
+@media(max-width:600px) { .hero-overlay { padding-top: 30vh; } .nav { flex-direction: column; gap: 10px; } .btn { width: 180px; text-align: center; } }
 </style>
 </head>
+
 <body>
 
+<!-- === HERO OBRÁZEK + TLAČÍTKA === -->
 <header class="hero">
   <div class="hero-bg">
     <img src="https://raw.githubusercontent.com/suchanek76/website/main/images/background.jpg" alt="background">
   </div>
   <div class="hero-overlay">
-    <div class="nav">
+    <div class="nav hero-nav">
       <button class="btn active" data-route="koruna">Koruna Evropy</button>
       <button class="btn" data-route="alpy">Alpské čtyřtisícovky</button>
       <button class="btn" data-route="nepal">Nepál</button>
@@ -167,34 +186,69 @@ footer{text-align:center;color:rgba(255,255,255,0.6);padding:30px 0;}
   </div>
 </header>
 
+<!-- === STICKY NAVIGACE (po scrollu) === -->
+<div class="sticky-nav" id="sticky-nav">
+  <div class="nav">
+    <button class="btn active" data-route="koruna">Koruna Evropy</button>
+    <button class="btn" data-route="alpy">Alpské čtyřtisícovky</button>
+    <button class="btn" data-route="nepal">Nepál</button>
+  </div>
+</div>
+
+<!-- === GALERIE === -->
 <main>
   <div class="container">
+
     <section id="koruna" data-route-content>
       <div id="koruna-gallery" class="gallery grid-3"></div>
     </section>
+
     <section id="alpy" data-route-content hidden>
       <div id="alpy-gallery" class="gallery grid-3"></div>
     </section>
+
     <section id="nepal" data-route-content hidden>
       <div id="nepal-gallery" class="gallery grid-4"></div>
     </section>
+
   </div>
 </main>
 
+<!-- === MODAL OKNO === -->
 <div id="modal-backdrop" class="modal-backdrop" hidden>
-  <div class="modal">
-    <div id="modal-content"></div>
-  </div>
+  <div class="modal"><div id="modal-content"></div></div>
 </div>
 
 <footer>© Vzít batoh na záda a jít ...</footer>
 
 <script>
-/* ---------- URL a generátory obrázků ---------- */
+/* === STICKY NAV === */
+const stickyNav = document.getElementById('sticky-nav');
+window.addEventListener('scroll',()=>{
+  stickyNav.classList.toggle('show', window.scrollY > window.innerHeight * 0.6);
+});
+
+/* === NAVIGACE SEKCÍ === */
+function setupNavigation(){
+  const buttons = document.querySelectorAll('.btn');
+  const sections = document.querySelectorAll('[data-route-content]');
+  
+  function show(route){
+    sections.forEach(s => s.hidden = (s.id !== route));
+    buttons.forEach(b => b.classList.toggle('active', b.dataset.route === route));
+    history.replaceState(null,'','#'+route);
+    const sec = document.getElementById(route);
+    if(sec) sec.scrollIntoView({behavior:"smooth"});
+  }
+  
+  buttons.forEach(b => b.addEventListener('click', ()=> show(b.dataset.route)));
+  window.addEventListener('popstate',()=> show(location.hash.substring(1) || 'koruna'));
+  show(location.hash ? location.hash.substring(1) : 'koruna');
+}
+setupNavigation();
+
+/* === DATA === */
 const RAW="https://raw.githubusercontent.com/suchanek76/website/main/images";
-const imgKoruna=i=>`${RAW}/Koruna/Koruna${String(i).padStart(2,'0')}.jpg`;
-const imgAlpy=i=>`${RAW}/4000/ctyrtisicovka${String(i).padStart(2,'0')}.jpg`;
-const imgNepal=i=>`${RAW}/Nepal/Nepal${String(i).padStart(2,'0')}.jpg`;
 
 /* ---------- Data: Koruna Evropy ---------- */
 const korunaData = [
@@ -330,57 +384,77 @@ const alpyData = [
 ];
 
 /* ---------- Data: Nepál ---------- */
-const nepalData = Array.from({length:40},(_,i)=>({idx:i,title:`Nepál ${i+1}`,img:imgNepal(i+1)}));
+const imgNepal = i => `${RAW}/Nepal/Nepal${String(i).padStart(2,'0')}.jpg`;
+const nepalData = Array.from({length:20},(_,i)=>({title:`Nepál ${i+1}`,img:imgNepal(i+1)}));
 
-/* ---------- Modal ---------- */
+/* === MODAL === */
 const modal=document.getElementById('modal-backdrop');
 const modalContent=document.getElementById('modal-content');
-modal.onclick=e=>{if(e.target===modal)closeModal();};
-function closeModal(){
-  modal.classList.remove('show');
-  modal.querySelector('.modal').classList.remove('fullscreen');
-  setTimeout(()=>{modal.hidden=true;modalContent.innerHTML='';},150);
-  document.body.style.overflow='';
-}
-function openModal(html,isFullscreen=false){
+function openModal(html,isFull=false){
   const box=modal.querySelector('.modal');
-  box.classList.toggle('fullscreen',isFullscreen);
+  box.classList.toggle('fullscreen',isFull);
   modalContent.innerHTML=html;
   modal.hidden=false;
   setTimeout(()=>modal.classList.add('show'),10);
   document.body.style.overflow='hidden';
 }
+function closeModal(){
+  modal.classList.remove('show');
+  setTimeout(()=>{modal.hidden=true;modalContent.innerHTML='';document.body.style.overflow='';},200);
+}
+modal.onclick=e=>{if(e.target===modal)closeModal();};
 
-/* ---------- Detail: Koruna & Alpy ---------- */
-let currentSection="",currentIndex=0;
-function showDetail(data,i,imgFn){
-  currentSection=data;
-  currentIndex=i;
-  const it=data[i];
-  openModal(`
-    <button class="modal-close" onclick="closeModal()">✕</button>
-    <h3>${it.p}/${data.length} – ${it.hora||''}${it.v ? ` (${it.v} m)` : ''}</h3>
-    <div class="meta">${it.z||''}</div>
-    <div class="meta">${it.d||''}</div>
-    <img class="main" src="${imgFn(i+1)}">
-  `);
+/* === KARTY === */
+function card(item,imgSrc,onClick){
+  const div=document.createElement('div');
+  div.className='photo-card';
+  div.innerHTML=`
+    <img class="photo" src="${imgSrc}">
+    <div class="photo-overlay">
+      <div class="photo-title">${item.hora||item.title}</div>
+      <div class="photo-sub">${item.z||''} ${item.d?('· '+item.d):''}</div>
+    </div>`;
+  div.onclick=onClick;
+  return div;
 }
 
-/* Klávesy – Koruna / Alpy */
-document.addEventListener('keydown',e=>{
-  const box=modal.querySelector('.modal');
-  if(box.classList.contains('fullscreen'))return;
-  if(!modal.classList.contains('show')||!currentSection)return;
-  if(e.key==='ArrowLeft'){
-    currentIndex=(currentIndex-1+currentSection.length)%currentSection.length;
-    showDetail(currentSection,currentIndex,currentSection===korunaData?imgKoruna:imgAlpy);
-  } else if(e.key==='ArrowRight'){
-    currentIndex=(currentIndex+1)%currentSection.length;
-    showDetail(currentSection,currentIndex,currentSection===korunaData?imgKoruna:imgAlpy);
-  } else if(e.key==='Escape') closeModal();
-});
+/* === RENDER GALERIÍ === */
+function renderAll(){
+  const korunaGallery=document.getElementById('koruna-gallery');
+  const alpyGallery=document.getElementById('alpy-gallery');
+  const nepalGallery=document.getElementById('nepal-gallery');
 
-/* ---------- Nepál ---------- */
+  korunaGallery.innerHTML='';
+  alpyGallery.innerHTML='';
+  nepalGallery.innerHTML='';
+
+  korunaData.forEach((it,i)=>korunaGallery.appendChild(
+    card(it,`${RAW}/Koruna/Koruna${String(i+1).padStart(2,'0')}.jpg`,()=>openModal(`
+      <button class='modal-close' onclick='closeModal()'>✕</button>
+      <h3>${it.hora} (${it.v} m)</h3>
+      <div class='meta'>${it.z}</div>
+      <div class='meta'>${it.d||''}</div>
+      <img class='main' src='${RAW}/Koruna/Koruna${String(i+1).padStart(2,'0')}.jpg'>
+    `))
+  ));
+
+  alpyData.forEach((it,i)=>alpyGallery.appendChild(
+    card(it,`${RAW}/4000/ctyrtisicovka${String(i+1).padStart(2,'0')}.jpg`,()=>openModal(`
+      <button class='modal-close' onclick='closeModal()'>✕</button>
+      <h3>${it.hora} (${it.v} m)</h3>
+      <div class='meta'>${it.z}</div>
+      <div class='meta'>${it.d||''}</div>
+      <img class='main' src='${RAW}/4000/ctyrtisicovka${String(i+1).padStart(2,'0')}.jpg'>
+    `))
+  ));
+
+  nepalData.forEach((it,i)=>nepalGallery.appendChild(
+    card(it,it.img,()=>openNepalModal(i))
+  ));
+}
+renderAll();
+
+/* === NEPÁL FULLSCREEN MODAL === */
 let nepalIndex=0;
 function openNepalModal(i){
   nepalIndex=i;
@@ -403,79 +477,8 @@ function changeNepal(dir){
 function updateNepalModal(){
   const it=nepalData[nepalIndex];
   document.getElementById('nepal-main').src=it.img;
-  document.getElementById('nepal-title').textContent=`Nepál (${nepalIndex+1}/${nepalData.length})`;
+  document.getElementById('nepal-title').textContent=`${it.title} (${nepalIndex+1}/${nepalData.length})`;
 }
-
-/* Klávesnice + Swipe Nepál */
-document.addEventListener('keydown',e=>{
-  const box=modal.querySelector('.modal');
-  if(!box.classList.contains('fullscreen'))return;
-  if(e.key==='ArrowLeft')changeNepal(-1);
-  else if(e.key==='ArrowRight')changeNepal(1);
-  else if(e.key==='Escape')closeModal();
-});
-let touchStartX=0,touchEndX=0;
-document.addEventListener('touchstart',e=>{
-  if(!modal.classList.contains('show'))return;
-  touchStartX=e.changedTouches[0].screenX;
-});
-document.addEventListener('touchend',e=>{
-  if(!modal.classList.contains('show'))return;
-  touchEndX=e.changedTouches[0].screenX;
-  const diff=touchEndX-touchStartX;
-  if(Math.abs(diff)<50)return;
-  if(diff>0)changeNepal(-1);else changeNepal(1);
-});
-
-/* ---------- Galerie ---------- */
-function cardKoruna(it,i){
-  const el=document.createElement('div');
-  el.className='photo-card';
-  el.innerHTML=`<img class="photo" src="${imgKoruna(i+1)}">
-  <div class="photo-overlay"><div class="photo-title">${it.p}. ${it.hora}</div>
-  <div class="photo-sub">${it.z||''} · ${it.d||''}</div></div>`;
-  el.onclick=()=>showDetail(korunaData,i,imgKoruna);
-  return el;
-}
-function cardAlpy(it,i){
-  const el=document.createElement('div');
-  el.className='photo-card';
-  el.innerHTML=`<img class="photo" src="${imgAlpy(i+1)}">
-  <div class="photo-overlay"><div class="photo-title">${it.p}. ${it.hora}</div>
-  <div class="photo-sub">${it.z||''} · ${it.d||''}</div></div>`;
-  el.onclick=()=>showDetail(alpyData,i,imgAlpy);
-  return el;
-}
-function cardSimple(it,i){
-  const el=document.createElement('div');
-  el.className='photo-card';
-  el.innerHTML=`<img class="photo" src="${it.img}">
-  <div class="photo-overlay"><div class="photo-title">${it.title}</div></div>`;
-  el.onclick=()=>openNepalModal(i);
-  return el;
-}
-
-/* Render */
-function renderGallery(el,data,fn){
-  el.innerHTML='';
-  data.forEach((it,i)=>el.appendChild(fn(it,i)));
-}
-renderGallery(document.getElementById('koruna-gallery'),korunaData,cardKoruna);
-renderGallery(document.getElementById('alpy-gallery'),alpyData,cardAlpy);
-renderGallery(document.getElementById('nepal-gallery'),nepalData,cardSimple);
-
-/* Přepínání sekcí */
-const btns=document.querySelectorAll('.btn');
-const sections=document.querySelectorAll('[data-route-content]');
-function show(route){
-  sections.forEach(s=>s.hidden=(s.id!==route));
-  btns.forEach(b=>b.classList.toggle('active',b.dataset.route===route));
-  history.replaceState(null,'','#'+route);
-  window.scrollTo(0,0);
-}
-btns.forEach(b=>b.addEventListener('click',()=>show(b.dataset.route)));
-window.addEventListener('popstate',()=>show(location.hash.substring(1)||'koruna'));
-show(location.hash?location.hash.substring(1):'koruna');
 </script>
 
 </body>
