--- a/index.html
+++ b/index.html
@@ -4,155 +4,123 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Vzít batoh na záda a jít ...</title>
-
 <style>
 :root {
   --dark-blue: #041633;
   --accent: #ffffff;
   --max-width: 1200px;
 }
-* { box-sizing: border-box; margin: 0; padding: 0; }
-body {
-  font-family: Inter, system-ui, sans-serif;
-  color: var(--accent);
-  background: var(--dark-blue);
-  overflow-x: hidden;
-  scroll-behavior: auto; /* zabrání sjíždění po načtení */
+*{box-sizing:border-box;}
+html,body{
+  margin:0;padding:0;
+  font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,Arial;
+  color:var(--accent);
+  background:var(--dark-blue);
+  overflow-x:hidden;
+  scroll-behavior:auto!important;
 }
 
-/* === HERO OBRÁZEK === */
-.hero {
-  position: relative;
-  height: 100vh;
-  overflow: hidden;
-  background: var(--dark-blue);
+/* Hero */
+.hero{position:relative;width:100%;height:100vh;background:var(--dark-blue);overflow:hidden;}
+.hero-bg{
+  position:absolute;inset:0;z-index:0;
+  display:flex;justify-content:center;align-items:flex-start;
+  background-color:#041633;
 }
-.hero-bg img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
+.hero-bg img{
+  width:100%;
+  height:auto;
+  min-height:100vh;
+  object-fit:contain;
+  object-position:top center;
+  background-color:#041633;
 }
-.hero-overlay {
-  position: absolute;
-  inset: 0;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding-top: 40vh; /* 2/5 výšky */
+.hero-overlay{
+  position:relative;z-index:2;height:100%;
+  display:flex;flex-direction:column;align-items:center;justify-content:flex-start;
+  text-align:center;padding-top:100px;
 }
+.hero h1{font-size:clamp(30px,6vw,56px);margin:0;text-shadow:0 3px 10px rgba(0,0,0,0.5);}
+.nav{margin-top:18px;display:flex;gap:12px;flex-wrap:wrap;justify-content:center;}
+.btn{
+  background:rgba(255,255,255,0.12);
+  border:1px solid rgba(255,255,255,0.2);
+  padding:10px 18px;
+  color:white;
+  border-radius:8px;
+  font-weight:600;
+  cursor:pointer;
+  transition:background .2s;
+}
+.btn:hover{background:rgba(255,255,255,0.25);}
+.btn.active{background:#fff;color:var(--dark-blue);}
 
-/* === TLAČÍTKA === */
-.nav {
-  display: flex;
-  gap: 14px;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.btn {
-  background: rgba(255,255,255,0.12);
-  border: 1px solid rgba(255,255,255,0.25);
-  padding: 14px 22px;
-  border-radius: 8px;
-  color: white;
-  font-weight: 600;
-  cursor: pointer;
-  transition: background 0.25s, transform 0.2s;
-}
-.btn:hover { background: rgba(255,255,255,0.3); transform: scale(1.04); }
-.btn.active { background: #fff; color: var(--dark-blue); }
+/* Galerie */
+main{position:relative;margin-top:-420px;z-index:3;background:none;padding-top:100px;padding-bottom:80px;}
+.container{width:95%;max-width:var(--max-width);margin:0 auto;}
+.gallery{display:grid;gap:16px;}
+.grid-3{grid-template-columns:repeat(3,1fr);}
+.grid-4{grid-template-columns:repeat(4,1fr);}
+@media(max-width:1000px){.grid-3,.grid-4{grid-template-columns:repeat(2,1fr);}}
+@media(max-width:600px){.grid-3,.grid-4{grid-template-columns:1fr;}}
 
-/* === GALERIE === */
-main { padding: 60px 0 80px; }
-.container { width: 95%; max-width: var(--max-width); margin: 0 auto; }
-.gallery { display: grid; gap: 16px; }
-.grid-3 { grid-template-columns: repeat(3, 1fr); }
-.grid-4 { grid-template-columns: repeat(4, 1fr); }
-@media(max-width:1000px) { .grid-3,.grid-4 { grid-template-columns: repeat(2,1fr); } }
-@media(max-width:600px) { .grid-3,.grid-4 { grid-template-columns: 1fr; } }
+/* Karty */
+.photo-card{position:relative;overflow:hidden;border-radius:10px;cursor:pointer;background:#000;}
+.photo-card img.photo{width:100%;aspect-ratio:3/2;object-fit:cover;transition:transform .35s ease;}
+.photo-card:hover img.photo{transform:scale(1.04);}
+.photo-overlay{
+  position:absolute;left:0;right:0;bottom:0;padding:10px;
+  background:linear-gradient(to top,rgba(0,0,0,0.7),rgba(0,0,0,0));
+  color:#fff;
+}
+.photo-title{font-weight:700;font-size:14px;margin:0;}
+.photo-sub{font-size:12px;opacity:0.9;margin-top:3px;}
 
-/* === KARTY === */
-.photo-card {
-  position: relative;
-  overflow: hidden;
-  border-radius: 10px;
-  background: #000;
-  cursor: pointer;
+/* Modal */
+.modal-backdrop{
+  position:fixed;inset:0;background:rgba(0,0,0,0.7);
+  display:flex;align-items:center;justify-content:center;
+  z-index:9999;padding:24px;
+  opacity:0;pointer-events:none;transition:opacity .18s;
 }
-.photo-card img.photo {
-  width: 100%;
-  aspect-ratio: 3/2;
-  object-fit: cover;
-  transition: transform .35s ease;
+.modal-backdrop.show{opacity:1;pointer-events:auto;}
+.modal{
+  width:100%;max-width:980px;max-height:92vh;background:#071431;
+  border-radius:10px;padding:18px;color:#fff;overflow:auto;position:relative;
 }
-.photo-card:hover img.photo { transform: scale(1.04); }
-.photo-overlay {
-  position: absolute; left: 0; right: 0; bottom: 0;
-  padding: 10px;
-  background: linear-gradient(to top,rgba(0,0,0,0.7),rgba(0,0,0,0));
+.modal-close{
+  position:absolute;right:16px;top:16px;background:none;border:none;
+  color:white;font-size:22px;cursor:pointer;
 }
-.photo-title { font-weight: 700; font-size: 14px; }
-.photo-sub { font-size: 12px; opacity: 0.9; }
+.modal .meta{font-size:14px;opacity:.95;margin-bottom:10px;}
+.modal img.main{
+  width:100%;border-radius:8px;object-fit:cover;margin:12px 0;max-height:480px;
+}
+footer{text-align:center;color:rgba(255,255,255,0.6);padding:30px 0;}
 
-/* === MODAL === */
-.modal-backdrop {
-  position: fixed; inset: 0;
-  background: rgba(0,0,0,0.7);
-  display: flex; justify-content: center; align-items: center;
-  opacity: 0; pointer-events: none;
-  transition: opacity .35s ease;
-  z-index: 9999;
+/* Fullscreen modal (Nepál) */
+.modal.fullscreen{
+  background:#000;max-width:none;max-height:none;width:100%;height:100%;
+  padding:0;display:flex;align-items:center;justify-content:center;
 }
-.modal-backdrop.show { opacity: 1; pointer-events: auto; }
-.modal {
-  max-width: 960px; width: 90%;
-  max-height: 90vh;
-  background: #071431;
-  border-radius: 10px;
-  padding: 20px;
-  overflow: auto;
-  color: white;
-  position: relative;
+.modal.fullscreen img.main{
+  max-height:90vh;max-width:95vw;object-fit:contain;border-radius:10px;margin:0 auto;display:block;
 }
-.modal-close {
-  position: absolute; right: 16px; top: 16px;
-  background: none; border: none; color: white;
-  font-size: 22px; cursor: pointer;
+.modal.fullscreen h3{
+  position:absolute;top:20px;left:30px;color:white;text-shadow:0 2px 5px rgba(0,0,0,0.8);
 }
-.modal img.main {
-  width: 100%; max-height: 480px;
-  object-fit: cover; border-radius: 8px;
-  margin: 12px 0;
+.modal.fullscreen .modal-close{
+  position:absolute;top:18px;right:24px;font-size:30px;background:none;border:none;color:white;cursor:pointer;z-index:10;
 }
-
-/* === FULLSCREEN MODAL (Nepál) === */
-.modal.fullscreen {
-  background: #000; width: 100%; height: 100%;
-  display: flex; justify-content: center; align-items: center;
-  padding: 0;
+.modal.fullscreen .nav-arrow{
+  background:none;border:none;color:white;font-size:40px;cursor:pointer;
+  position:absolute;top:50%;transform:translateY(-50%);padding:20px;opacity:0.6;transition:opacity .2s;
 }
-.modal.fullscreen img.main {
-  max-height: 90vh; max-width: 95vw;
-  object-fit: contain;
-}
-.modal.fullscreen .nav-arrow {
-  position: absolute; top: 50%;
-  transform: translateY(-50%);
-  background: none; border: none;
-  color: white; font-size: 40px;
-  cursor: pointer; opacity: 0.6;
-}
-.modal.fullscreen .nav-arrow:hover { opacity: 1; }
-.nav-arrow.left { left: 20px; }
-.nav-arrow.right { right: 20px; }
-
-footer { text-align: center; color: rgba(255,255,255,0.6); padding: 30px 0; }
-
-@media(max-width:900px) { .hero-overlay { padding-top: 35vh; } .btn { padding: 12px 18px; font-size: 15px; } }
-@media(max-width:600px) { .hero-overlay { padding-top: 30vh; } .nav { flex-direction: column; gap: 10px; } .btn { width: 180px; text-align: center; } }
+.modal.fullscreen .nav-arrow:hover{opacity:1;}
+.modal.fullscreen .nav-arrow.left{left:20px;}
+.modal.fullscreen .nav-arrow.right{right:20px;}
 </style>
 </head>
-
 <body>
 
 <header class="hero">
@@ -160,7 +128,8 @@ footer { text-align: center; color: rgba(255,255,255,0.6); padding: 30px 0; }
     <img src="https://raw.githubusercontent.com/suchanek76/website/main/images/background.jpg" alt="background">
   </div>
   <div class="hero-overlay">
-    <div class="nav hero-nav">
+    <h1>Vzít batoh na záda a jít ...</h1>
+    <div class="nav">
       <button class="btn active" data-route="koruna">Koruna Evropy</button>
       <button class="btn" data-route="alpy">Alpské čtyřtisícovky</button>
       <button class="btn" data-route="nepal">Nepál</button>
@@ -183,30 +152,21 @@ footer { text-align: center; color: rgba(255,255,255,0.6); padding: 30px 0; }
 </main>
 
 <div id="modal-backdrop" class="modal-backdrop" hidden>
-  <div class="modal"><div id="modal-content"></div></div>
+  <div class="modal">
+    <div id="modal-content"></div>
+  </div>
 </div>
 
 <footer>© Vzít batoh na záda a jít ...</footer>
 
 <script>
-/* === NAVIGACE === */
-function setupNavigation(){
-  const buttons=document.querySelectorAll('.btn');
-  const sections=document.querySelectorAll('[data-route-content]');
-  function show(route){
-    sections.forEach(s=>s.hidden=(s.id!==route));
-    buttons.forEach(b=>b.classList.toggle('active',b.dataset.route===route));
-  }
-  buttons.forEach(b=>b.addEventListener('click',()=>show(b.dataset.route)));
-  show('koruna');
-}
-setupNavigation();
-
-
-/* === DATA === */
 const RAW="https://raw.githubusercontent.com/suchanek76/website/main/images";
+const imgKoruna=i=>`${RAW}/Koruna/Koruna${String(i).padStart(2,'0')}.jpg`;
+const imgAlpy=i=>`${RAW}/4000/ctyrtisicovka${String(i).padStart(2,'0')}.jpg`;
+const imgNepal=i=>`${RAW}/Nepal/Nepal${String(i).padStart(2,'0')}.jpg`;
 
-/* ---------- Data: Koruna Evropy ---------- */
+
+/* ---------- Data: Koruna (z mé tabulky) ---------- */
 const korunaData = [
 {p:"1",hora:"Mont Blanc",v:"4 807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič,    2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Mont Blank",povidani:""},
 {p:"2",hora:"Dufourspitze",v:"4 634",z:"Švýcarsko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
@@ -253,7 +213,8 @@ const korunaData = [
 {p:"43",hora:"Vatikánské zahrady",v:"75",z:"Vatikán",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""}
 ];
 
-/* ---------- Data: Alpy 4000 ---------- */
+/* ---------- Data: Alpy 4000 (z mé tabulky) ---------- */
+/* prázdné hodnoty zůstávají prázdné */
 const alpyData = [
 {p:"1",hora:"Mont Blanc",v:"4 807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič,    2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Mont Blank",povidani:""},
 {p:"2",hora:"Mont Blanc di Courmayeur",v:"4 765",z:"",d:"",cas:"",team:"",obt:"B+",pohori:"Mont Blank",povidani:""},
@@ -339,102 +300,108 @@ const alpyData = [
 {p:"82",hora:"Les Droites",v:"4 000",z:"",d:"",cas:"",team:"",obt:"C",pohori:"Aiguille Verte",povidani:""}
 ];
 
-/* ---------- Data: Nepál ---------- */
-const imgNepal=i=>`${RAW}/Nepal/Nepal${String(i).padStart(2,'0')}.jpg`;
-const nepalData=Array.from({length:20},(_,i)=>({title:`Nepál ${i+1}`,img:imgNepal(i+1)}));
+/* ---------- Data: Nepál (jen obrázky) ---------- */
+const nepalData = Array.from({length:40}, (_,i)=>({
+  idx:i,
+  title:`Nepál ${i+1}`,
+  img:imgNepal(i+1)
+}));
 
-/* === MODAL === */
+/* Modal systém */
 const modal=document.getElementById('modal-backdrop');
 const modalContent=document.getElementById('modal-content');
-function openModal(html,isFull=false){
-  const box=modal.querySelector('.modal');
-  box.classList.toggle('fullscreen',isFull);
-  modalContent.innerHTML=html;
-  modal.hidden=false;
-  requestAnimationFrame(()=>modal.classList.add('show'));
-  document.body.style.overflow='hidden';
-}
+modal.onclick=e=>{if(e.target===modal)closeModal();};
 function closeModal(){
   modal.classList.remove('show');
-  setTimeout(()=>{modal.hidden=true;modalContent.innerHTML='';document.body.style.overflow='';},300);
+  modal.querySelector('.modal').classList.remove('fullscreen');
+  setTimeout(()=>{modal.hidden=true;modalContent.innerHTML='';},150);
+  document.body.style.overflow='';
 }
-modal.onclick=e=>{if(e.target===modal)closeModal();};
-
-/* === KARTY === */
-function card(item,imgSrc,onClick){
-  const div=document.createElement('div');
-  div.className='photo-card';
-  div.innerHTML=`<img class="photo" src="${imgSrc}"><div class="photo-overlay"><div class="photo-title">${item.hora||item.title}</div><div class="photo-sub">${item.z||''}${item.d?(' · '+item.d):''}</div></div>`;
-  div.onclick=onClick;
-  return div;
+function openModal(html,isFullscreen=false){
+  const box=modal.querySelector('.modal');
+  box.classList.toggle('fullscreen',isFullscreen);
+  modalContent.innerHTML=html;
+  modal.hidden=false;
+  setTimeout(()=>modal.classList.add('show'),10);
+  document.body.style.overflow='hidden';
 }
 
-/* === RENDER === */
-function renderAll(){
-  const koruna=document.getElementById('koruna-gallery');
-  const alpy=document.getElementById('alpy-gallery');
-  const nepal=document.getElementById('nepal-gallery');
-  koruna.innerHTML=''; alpy.innerHTML=''; nepal.innerHTML='';
-
-  korunaData.forEach((it,i)=>koruna.appendChild(card(it,`${RAW}/Koruna/Koruna${String(i+1).padStart(2,'0')}.jpg`,
-    ()=>openModal(`<button class='modal-close' onclick='closeModal()'>✕</button>
-    <h3>${it.hora} (${it.v} m)</h3>
-    <div>${it.z||''}</div>
-    <div>${it.d||''}</div>
-    <img class='main' src='${RAW}/Koruna/Koruna${String(i+1).padStart(2,'0')}.jpg'>`)
-  )));
-  alpyData.forEach((it,i)=>alpy.appendChild(card(it,`${RAW}/4000/ctyrtisicovka${String(i+1).padStart(2,'0')}.jpg`,
-    ()=>openModal(`<button class='modal-close' onclick='closeModal()'>✕</button>
-    <h3>${it.hora} (${it.v} m)</h3>
-    <div>${it.z||''}</div>
-    <img class='main' src='${RAW}/4000/ctyrtisicovka${String(i+1).padStart(2,'0')}.jpg'>`)
-  )));
-  nepalData.forEach((it,i)=>nepal.appendChild(card(it,it.img,()=>openNepalModal(i))));
+/* Koruna + Alpy */
+function showDetail(it,imgSrc){
+  openModal(`
+    <button class="modal-close" onclick="closeModal()">✕</button>
+    <div class="meta"><strong>${it.p}. ${it.hora}</strong> ${it.v?`, ${it.v} m`:''}</div>
+    <div class="meta">${it.z||''}</div>
+    <div class="meta">${it.d?`${it.d}${it.cas?`, ${it.cas} hod`:''}`:''}</div>
+    <div class="meta">Pohoří: ${it.pohori||''}</div>
+    <div class="meta">Team: ${it.team||''}</div>
+    <div class="meta">Obtížnost: ${it.obt||''}</div>
+    <img class="main" src="${imgSrc}">
+    <p>${it.povidani||''}</p>
+  `);
 }
-renderAll();
 
-/* === NEPÁL FULLSCREEN === */
+/* Nepál slideshow */
 let nepalIndex=0;
 function openNepalModal(i){
   nepalIndex=i;
-  openModal(`<button class="nav-arrow left" id="nav-left">❮</button>
+  openModal(`
+    <button class="nav-arrow left" id="nav-left">❮</button>
     <button class="nav-arrow right" id="nav-right">❯</button>
     <h3 id="nepal-title"></h3>
     <button class="modal-close" id="modal-close">✕</button>
-    <img class="main" id="nepal-main" src="">`,true);
+    <img class="main" id="nepal-main" src="">
+  `,true);
   document.getElementById('modal-close').onclick=closeModal;
   document.getElementById('nav-left').onclick=e=>{e.stopPropagation();changeNepal(-1);};
   document.getElementById('nav-right').onclick=e=>{e.stopPropagation();changeNepal(1);};
   updateNepalModal();
 }
-function changeNepal(dir){nepalIndex=(nepalIndex+dir+nepalData.length)%nepalData.length;updateNepalModal();}
+function changeNepal(dir){
+  nepalIndex=(nepalIndex+dir+nepalData.length)%nepalData.length;
+  updateNepalModal();
+}
 function updateNepalModal(){
   const it=nepalData[nepalIndex];
   document.getElementById('nepal-main').src=it.img;
-  document.getElementById('nepal-title').textContent=`${it.title} (${nepalIndex+1}/${nepalData.length})`;
+  document.getElementById('nepal-title').textContent=`Nepál (${nepalIndex+1}/${nepalData.length})`;
 }
 
-/* === SWIPE GESTA === */
-let touchStartX=0,touchEndX=0,touchStartY=0,touchEndY=0;
-document.addEventListener("touchstart",e=>{
-  touchStartX=e.changedTouches[0].screenX;
-  touchStartY=e.changedTouches[0].screenY;
-},false);
-document.addEventListener("touchend",e=>{
-  touchEndX=e.changedTouches[0].screenX;
-  touchEndY=e.changedTouches[0].screenY;
-  handleGesture();
-},false);
-function handleGesture(){
-  if(!modal.classList.contains("show"))return;
-  const dx=touchEndX-touchStartX;
-  const dy=touchEndY-touchStartY;
-  if(Math.abs(dx)>Math.abs(dy)){
-    if(Math.abs(dx)>50){dx>0?changeNepal(-1):changeNepal(1);}
-  }else{
-    if(Math.abs(dy)>60){closeModal();}
-  }
+/* Karty */
+function cardKoruna(it){const n=parseInt(it.p,10);
+  const el=document.createElement('div');
+  el.className='photo-card';
+  el.innerHTML=`<img class="photo" src="${imgKoruna(n)}"><div class="photo-overlay"><div class="photo-title">${it.p}. ${it.hora}</div><div class="photo-sub">${it.z} · ${it.d}</div></div>`;
+  el.onclick=()=>showDetail(it,imgKoruna(n));return el;}
+function cardAlpy(it){const n=parseInt(it.p,10);
+  const el=document.createElement('div');
+  el.className='photo-card';
+  el.innerHTML=`<img class="photo" src="${imgAlpy(n)}"><div class="photo-overlay"><div class="photo-title">${it.p}. ${it.hora}</div><div class="photo-sub">${it.z} · ${it.d}</div></div>`;
+  el.onclick=()=>showDetail(it,imgAlpy(n));return el;}
+function cardSimple(it,i){
+  const el=document.createElement('div');
+  el.className='photo-card';
+  el.innerHTML=`<img class="photo" src="${it.img}"><div class="photo-overlay"><div class="photo-title">${it.title}</div></div>`;
+  el.onclick=()=>openNepalModal(i);return el;}
+
+/* Render */
+function renderGallery(el,data,fn){el.innerHTML='';data.forEach((it,i)=>el.appendChild(fn(it,i)));}
+renderGallery(document.getElementById('koruna-gallery'),korunaData,cardKoruna);
+renderGallery(document.getElementById('alpy-gallery'),alpyData,cardAlpy);
+renderGallery(document.getElementById('nepal-gallery'),nepalData,cardSimple);
+
+/* Přepínání sekcí */
+const btns=document.querySelectorAll('.btn');
+const sections=document.querySelectorAll('[data-route-content]');
+function show(route){
+  sections.forEach(s=>s.hidden=(s.id!==route));
+  btns.forEach(b=>b.classList.toggle('active',b.dataset.route===route));
+  history.replaceState(null,'','#'+route);
+  window.scrollTo(0,0);
 }
+btns.forEach(b=>b.addEventListener('click',()=>show(b.dataset.route)));
+window.addEventListener('popstate',()=>show(location.hash.substring(1)||'koruna'));
+show(location.hash?location.hash.substring(1):'koruna');
 </script>
 
 </body>
